short_app/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mypostgres
  template:
    metadata:
      labels:
        app: mypostgres
    spec:
      containers:
      - name: mypostgres-image
        image: postgres:16
        ports:
          - containerPort: 5432
        resources:
          limits:
            memory: "500Mi"
            cpu: "300m"
          requests:
            memory: "500Mi"
            cpu: "300m"
        volumeMounts:
          - name: postgres-data
            mountPath: /var/lib/postgresql/data
            subPath: postgres
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mypostgres-service
spec:
  type: ClusterIP
  selector:
    app: mypostgres
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
