short_app/service_api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-part-deployment
spec:
  selector:
    matchLabels:
      app: api-part
  template:
    metadata:
      labels:
        app: api-part
    spec:
      containers:
      - name: short-api
        image: antonlarichev/short-api:v1.0
        resources:
          limits:
            memory: "1Gi"
            cpu: "500m"
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: api-part-service
spec:
  type: ClusterIP
  selector:
    app: api-part
  ports:  
  - protocol: TCP
    port: 3000 # by default port = targetPort
