short_app/service_app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-part-deployment
  labels: 
    component: frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: frontend
  template:
    metadata:
      labels:
        component: frontend
    spec:
      containers:
        - name: short-app
          image: antonlarichev/short-app:v1.4
          imagePullPolicy: Always
          resources:
            limits:
              memory: "256Mi"
              cpu: "200m"
            requests:
              memory: "128Mi"
              cpu: "200m"
          ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app-part-service
spec:
  type: ClusterIP
  selector:
    component: frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
