short_app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    app.kubernetes.io/name: myingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: min.test
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: app-part-service
            port: 
              number: 80
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: api-part-service
            port: 
              number: 3000
